# template-repo-JJLab

./: .gitignore  Dockerfile  README.md  default.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilots-instructions.md  mcp.json
.github/agents/: architect.agent.md  data-explorer.agent.md  debt-surgeon.agent.md  implementer.agent.md  monitor.agent.md  qa.agent.md
scripts/: check_env.py
