[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-name"  # <-- CUSTOMIZE
version = "0.1.0"
description = "A new Python ML project"  # <-- CUSTOMIZE
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }  # <-- CUSTOMIZE
]
keywords = ["machine-learning", "data-science"]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # Data processing
    "pandas>=2.0.0",
    "polars>=0.20.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",

    # Progress bars
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
geo = [
    # Geospatial (requires system GDAL)
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
]
all = [
    "project-name[dev,geo]",  # <-- MATCH project.name
]

[project.urls]
Repository = "https://github.com/org/project-name"  # <-- CUSTOMIZE

# -----------------------------------------------------------------------------
# Tool configuration
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]  # <-- CUSTOMIZE
